--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,19 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+  app:
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/var/www/project  
+    environment:
+      - APP_ENV=dev
+      - XDEBUG_MODE=debug  
+      - XDEBUG_CONFIG=client_host=host.docker.internal
+
 
 volumes:
   mysql-data:
