--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  mysql:
+  database:
     image: mysql:8.0 
     environment:
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/mysql_root_password
@@ -10,10 +10,11 @@ services:
       - mysql-data:/var/lib/mysql
       - ./mysql/conf.d:/etc/mysql/conf.d:ro
     ports:
-      - "127.0.0.1:3307:3306" 
+      - "3307:3306" 
     secrets:
       - mysql_root_password
       - mysql_password
+
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
@@ -35,6 +36,10 @@ services:
       - APP_ENV=dev
       - XDEBUG_MODE=debug  
       - XDEBUG_CONFIG=client_host=host.docker.internal
+    secrets:
+      - database_url
+    depends_on:
+      - database
 
 
 volumes:
@@ -46,3 +51,5 @@ secrets:
     file: ./secrets/mysql_root_password.txt
   mysql_password:
     file: ./secrets/mysql_password.txt
+  database_url:
+    file: ./secrets/database_url.txt
